--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -4,9 +4,10 @@ html
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
-        link(rel="stylesheet", href="../scss/index.scss")
+        link(rel="stylesheet", href="../../static/main.css")
     body
         header
             include ../partials/header
         main
             block content
+        script(src="../../static/main.js")
