--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,8 +1,37 @@
 extends layouts/main.pug
 
 block content
-    .button-wrapper
-        .calendar-button
-            a.calendar-button__btn(href=routes.calendar) 달력
-        .todolist-button
-            a.todolist-button__btn(href=routes.plans) 투두리스트
+    section
+        .container
+            .user.signin
+                .image-box
+                    .image-box__image
+                .form-box
+                    form.form-box__form(action="")
+                        h2.form-box__title 로그인
+                        input(type="text", name="", placeholder="아이디")
+                        input(type="password", name="", placeholder="비밀번호")
+                        input(type="submit", name="", value="확인")
+                        p.sign__text 
+                            | 계정이 없다면? 
+                            a.sign-up__link(href="#") 회원가입 
+                            | 또는 
+                            a.guest__link(href="#") 게스트로 구경
+            .user.signup
+                .form-box
+                    form.form-box__form(action="")
+                        h2.form-box__title 회원가입
+                        input(type="text", name="", placeholder="아이디")
+                        input(type="email", name="", placeholder="메일 주소")
+                        input(type="password", name="", placeholder="비밀번호 입력")
+                        input(type="password", name="", placeholder="비밀번호 재입력")
+                        input(type="submit", name="", value="확인")
+                        p.sign__text 
+                            | 이미 계정이 있다면? 
+                            a.sign-in__link(href="#") 로그인
+                .image-box
+            //- .button-wrapper
+            //-     a.calendar-button(href=routes.calendar)
+            //-         .button CALENDAR
+            //-     a.todolist-button(href=routes.plans)
+            //-         .button TO DO LIST
