[#7] addEventListener를 이용하여 오류 해결
- addEventListener 사용 시 함수가 작동되어도 개발자 모드에서 함수를 찾을
  수 없다는 오류가 발생하여 전역 함수 선언하는 것으로 해결했었다.
- 함수는 잘 호출하는데 해당 오류가 발생하는 것은 다른 문제라고 생각하여
  a 태그에서 onClick 속성을 지우니 오류도 함께 사라졌다.
- class명을 동일하게 주어도 상관없을 것 같아서 동일한 class명을
  줘보았지만 한 번 클릭할 때는 동작하는데 다른 버튼을 클릭하면 아무
  동작도 하지 않아 class명을 따로 줬다.

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -14,7 +14,7 @@ block content
                         input(type="submit", name="", value="확인")
                         p.sign__text 
                             | 계정이 없다면? 
-                            a.sign-up__link(href="#", onclick="toggleForm();") 회원가입 
+                            a.sign-up__link(href="#") 회원가입 
                             | 또는 
                             a.guest__link(href="#") 게스트로 구경
             .user.signup
@@ -28,7 +28,7 @@ block content
                         input(type="submit", name="", value="확인")
                         p.sign__text 
                             | 이미 계정이 있다면? 
-                            a.sign-in__link(href="#", onclick="toggleForm();") 로그인
+                            a.sign-in__link(href="#") 로그인
                 .image-box
             //- .button-wrapper
             //-     a.calendar-button(href=routes.calendar)
