--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -1,13 +1,17 @@
 @import "./config/variables";
 
-section {
+body {
+	width: 100%;
 	position: relative;
-	min-height: 90vh;
+	float: left;
+	min-height: 89vh;
 	background-color: $hover-yellow;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
+	margin: 70px 0;
+	overflow: hidden;
 
 	.container {
 		position: relative;
@@ -19,8 +23,6 @@ section {
 
 		.user {
 			position: absolute;
-			top: 0;
-			left: 0;
 			width: 100%;
 			height: 100%;
 			display: flex;
