새로 생성한 scss 파일 추가
webpack에서 함께 통합하도록 새로 생성한 scss 파일을 styles.scss에 추가

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,7 @@
 @import "./config/variables";
+@import "./config/reset.scss";
 
-body {
-	background-color: $bgColor;
-}
+@import "./header.scss";
+@import "./home.scss";
+@import "./calendar.scss";
+@import "./plans.scss";
