색상 변수 수정 및 추가
동일한 색상을 편하게 사용하기 위해 변수 추가

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -1,1 +1,13 @@
-$bgColor: red;
+$background: #fffcf4;
+$border: rgb(255, 197, 150);
+$border-gray: rgb(170, 170, 170);
+$soft-gray: rgb(201, 201, 201);
+$gray: rgb(173, 173, 173);
+$fill: rgb(243, 221, 196);
+$hover: rgb(243, 235, 225);
+$input-focus: rgba(255, 255, 255, 0.562);
+$title: rgb(63, 63, 63);
+$text: rgb(228, 116, 64);
+$header-button: rgb(247, 167, 102);
+$header-button-hover: rgb(250, 193, 143);
+$add-button: rgb(255, 250, 246);
