헤더 버튼 추가 및 로고 변경
- 투두리스트 달력으로 이동하는 버튼과 공부/일상을 toggle하는 버튼을
  헤더로 옮겼다.
- 로그인 버튼은 없애려다가 게스트로 입장 시 로그인 버튼을 볼 수 있으면
  사용자가 편할 것 같아 추가했다.
- 아직 권한이 없어 모든 페이지서 버튼이 전부 나타나지만 메인
  페이지에서는 로고만 나타나고, 버튼들은 페이지와 권한에 따라 바뀌도록
  할 것이다.
- 공부/일상 중 선택된 버튼에 맞는 데이터를 표현할 것인데(filter처럼)
  radio 버튼으로 했다가 디자인이 힘들어 button으로 바꿨다. 나중에 사용할
  때 불편하면 다시 radio 버튼으로 바꿀  있을 것 같다.

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -4,10 +4,32 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 @import "./config/variables";
 
+* {
+	font-family: "Nanum Gothic";
+	font-style: normal;
+	font-weight: 500;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	width: 100%;
+	position: relative;
+	float: left;
+	min-height: 89vh;
+	background-color: $background;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	margin: 65px 0;
+	overflow: hidden;
+}
+
 header {
 	height: 60px;
-	background-color: white;
-	padding-top: 10px;
+	padding-top: 25px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -23,30 +45,39 @@ header {
 			font-weight: 700;
 			margin-top: 3px;
 		}
-		.header__auth {
+		.header__button-wrapper {
+			position: relative;
+			top: 0;
 			float: left;
 			width: 30%;
 			text-align: right;
-			background-color: white;
-			margin-top: 10px;
+
+			a {
+				position: relative;
+				top: 1.5px;
+				width: 50px;
+				height: 18px;
+				padding: 7.5px 8px 7.5px 12px;
+				margin: 0 10px 0 0;
+				font-size: 14px;
+				background-color: $header-button;
+				text-align: center;
+				color: white;
+			}
+
+			button {
+				width: 55px;
+				height: 33px;
+				font-size: 14px;
+				background-color: $header-button;
+				color: white;
+				border-right: 0.5px solid white;
+			}
+
+			a:hover,
+			button:hover {
+				background-color: $header-button-hover;
+			}
 		}
 	}
 }
-
-* {
-	font-family: "Nanum Gothic";
-	font-style: normal;
-	font-weight: 500;
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-body {
-	background-color: $hover-yellow;
-}
-
-// .container {
-// 	width: 78%;
-// 	margin: 0 auto;
-// }
