--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -1,163 +1,149 @@
 @import "./config/variables";
 
-body {
-	width: 100%;
+.container {
 	position: relative;
-	float: left;
-	min-height: 89vh;
-	background-color: $hover-yellow;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px;
-	margin: 70px 0;
+	width: 800px;
+	height: 550px;
+	background-color: #fff;
+	border: 1px solid $soft-gray;
 	overflow: hidden;
 
-	.container {
-		position: relative;
-		width: 800px;
-		height: 550px;
-		background-color: #fff;
-		box-shadow: 0 15px 30px rgba(0, 0, 0, 0.07);
-		overflow: hidden;
+	.user {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		display: flex;
 
-		.user {
+		&.signup {
+			pointer-events: none;
+
+			.form-box {
+				left: 100%;
+			}
+
+			.image-box {
+				left: -100%;
+				background-color: #f5a1a1;
+			}
+		}
+
+		&.signin {
+			.form-box,
+			.image-box {
+				left: 0;
+			}
+		}
+	}
+
+	&.active {
+		.signup {
+			pointer-events: initial;
+
+			.form-box,
+			.image-box {
+				left: 0;
+			}
+		}
+
+		.signin {
+			.form-box {
+				left: 100%;
+			}
+
+			.image-box {
+				left: -100%;
+			}
+		}
+	}
+
+	.image-box {
+		position: relative;
+		width: 50%;
+		height: 100%;
+		transition: 0.5s;
+
+		.image-box__image {
 			position: absolute;
+			top: 0;
+			left: 0;
 			width: 100%;
 			height: 100%;
-			display: flex;
-
-			&.signup {
-				pointer-events: none;
-
-				.form-box {
-					left: 100%;
-				}
-
-				.image-box {
-					left: -100%;
-					background-color: #f5a1a1;
-				}
-			}
-
-			&.signin {
-				.form-box,
-				.image-box {
-					left: 0;
-				}
-			}
+			background-color: #f5e8a1;
+			object-fit: cover;
 		}
+	}
 
-		&.active {
-			.signup {
-				pointer-events: initial;
+	.form-box {
+		position: relative;
+		width: 50%;
+		height: 100%;
+		background-color: #fff;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 50px;
+		transition: 0.5s;
 
-				.form-box,
-				.image-box {
-					left: 0;
-				}
-			}
-
-			.signin {
-				.form-box {
-					left: 100%;
-				}
-
-				.image-box {
-					left: -100%;
-				}
-			}
-		}
-
-		.image-box {
-			position: relative;
-			width: 50%;
-			height: 100%;
-			transition: 0.5s;
-
-			.image-box__image {
-				position: absolute;
-				top: 0;
-				left: 0;
+		.form-box__form {
+			.form-box__title {
+				font-size: 25px;
+				font-weight: 600;
+				text-transform: uppercase;
+				letter-spacing: 2px;
+				text-align: center;
 				width: 100%;
-				height: 100%;
-				background-color: #f5e8a1;
-				object-fit: cover;
+				margin-bottom: 12px;
+				color: $title;
 			}
-		}
 
-		.form-box {
-			position: relative;
-			width: 50%;
-			height: 100%;
-			background-color: #fff;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			padding: 50px;
-			transition: 0.5s;
+			input {
+				position: relative;
+				width: 100%;
+				padding: 10px 7px;
+				color: #333;
+				border-bottom: 0.5px solid $border-gray;
+				outline: none;
+				box-shadow: none;
+				margin: 12px 0 0 0;
+				font-size: 15px;
+				letter-spacing: 1px;
+				font-weight: 300;
 
-			.form-box__form {
-				.form-box__title {
-					font-size: 25px;
-					font-weight: 600;
-					text-transform: uppercase;
-					letter-spacing: 2px;
-					text-align: center;
-					width: 100%;
-					margin-bottom: 12px;
-					color: #555;
-				}
-
-				input {
-					position: relative;
-					width: 100%;
-					padding: 10px 7px;
-					color: #333;
-					border-bottom: 0.5px solid rgb(170, 170, 170);
-					outline: none;
-					box-shadow: none;
-					margin: 12px 0 0 0;
+				&[type="submit"] {
+					margin: 20px 0 0 0;
+					max-width: 100%;
+					height: 50px;
+					background: $header-button;
+					border: none;
+					color: #fff;
+					cursor: pointer;
 					font-size: 15px;
+					font-weight: 500;
 					letter-spacing: 1px;
-					font-weight: 300;
+					transition: 0.5s;
 
-					&[type="submit"] {
-						margin: 20px 0 0 0;
-						max-width: 100%;
-						height: 50px;
-						background: rgb(255, 157, 111);
-						border: none;
-						color: #fff;
-						cursor: pointer;
-						font-size: 15px;
-						font-weight: 500;
-						letter-spacing: 1px;
-						transition: 0.5s;
-
-						&:hover {
-							background: rgb(255, 173, 135);
-						}
+					&:hover {
+						background: $header-button-hover;
 					}
 				}
+			}
 
-				.sign__text {
-					position: relative;
-					margin-top: 18px;
-					font-size: 13px;
-					letter-spacing: 1px;
-					color: #888;
-					text-transform: uppercase;
-					font-weight: 300;
+			.sign__text {
+				position: relative;
+				margin-top: 18px;
+				font-size: 13px;
+				letter-spacing: 1px;
+				color: $gray;
+				text-transform: uppercase;
+				font-weight: 300;
 
-					a {
-						font-weight: 600;
-						text-decoration: none;
-						color: rgb(228, 116, 64);
+				a {
+					font-weight: 600;
+					text-decoration: none;
+					color: $text;
 
-						&:hover {
-							color: rgb(255, 159, 115);
-						}
+					&:hover {
+						color: $header-button;
 					}
 				}
 			}
