a, button 태그 기본값 추가
scss를 사용하며 a 태그와 button 태그는 마우스를 올렸을 때 커서를
바꿔서 클릭 가능하다는 것을 보여주기 위해 공통적로 필요한 부분을 반복
작성하지 않도록 reset.scss에 추가

--- a/src/assets/scss/config/reset.scss
+++ b/src/assets/scss/config/reset.scss
@@ -86,6 +86,7 @@ video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -100,17 +101,21 @@ nav,
 section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
+
 ol,
 ul {
 	list-style: none;
 }
+
 blockquote,
 q {
 	quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -118,17 +123,34 @@ q:after {
 	content: "";
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 a {
 	all: unset;
 	cursor: pointer;
 	&:visited {
 		color: black;
 	}
+	&:hover {
+		cursor: pointer;
+	}
 }
+
+button {
+	border: none;
+	background: transparent;
+	&:hover {
+		cursor: pointer;
+	}
+	&:focus {
+		outline: none;
+	}
+}
+
 *,
 input {
 	box-sizing: border-box;
