passport 관련 패키지 설치 및 회원가입 controller 설정
- 사용자 인증 관련 처리를 위하여 passport-local-mongoose 설치 후
  passport.js 파일 생성
- 메인 화면과 로그인/회원가입 페이지가 따로 있는 것이 아니어서
  userController와 globalController를 합쳐도 될 것 같아
  globalController를 삭제하고 userController에 포함시킴
- controller에서 구분하기 좋도록 method를 포함하여 postJoin으로 이름
  수정
- 값을 받기 위해 joinform의 input name을 각각 지정하고 submit되면 해당
  데이터들이 postJoin으로 갈 수 있도록 action 설정
- postJoin을 통해 값을 받고, password를 비교하여 값이 잘못되었다면
  브라우저에게 알리기 위해 상태코드 400을 반환하도록 추가

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,32 +6,29 @@ block content
             .user.signin
                 .image-box
                     .image-box__image
+                        img(src="/src/img/two.jpg", alt="")
                 .form-box
-                    form.form-box__form(action="")
+                    form.form-box__form(action=postLogin, method="post")
                         h2.form-box__title 로그인
                         input(type="text", name="", placeholder="아이디")
                         input(type="password", name="", placeholder="비밀번호")
                         input(type="submit", name="", value="확인")
                         p.sign__text 
                             | 계정이 없다면? 
-                            a.sign-up__link(href="#") 회원가입 
+                            a.sign-up__link(href="#", onclick="toggleForm();") 회원가입 
                             | 또는 
                             a.guest__link(href="#") 게스트로 구경
             .user.signup
                 .form-box
-                    form.form-box__form(action="")
+                    form.form-box__form(action=postJoin, method="post")
                         h2.form-box__title 회원가입
-                        input(type="text", name="", placeholder="아이디")
-                        input(type="email", name="", placeholder="메일 주소")
-                        input(type="password", name="", placeholder="비밀번호 입력")
-                        input(type="password", name="", placeholder="비밀번호 재입력")
-                        input(type="submit", name="", value="확인")
+                        input(type="text", name="id", placeholder="아이디")
+                        input(type="email", name="email", placeholder="메일 주소")
+                        input(type="password", name="password", placeholder="비밀번호 입력")
+                        input(type="password", name="password2", placeholder="비밀번호 재입력")
+                        input(type="submit", value="확인")
                         p.sign__text 
                             | 이미 계정이 있다면? 
-                            a.sign-in__link(href="#") 로그인
+                            a.sign-in__link(href="#", onclick="toggleForm();") 로그인
                 .image-box
-            //- .button-wrapper
-            //-     a.calendar-button(href=routes.calendar)
-            //-         .button CALENDAR
-            //-     a.todolist-button(href=routes.plans)
-            //-         .button TO DO LIST
+                    img(src="../img/two.jpg", alt="")
