--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,11 +8,11 @@ block content
                     .image-box__image
                         img(src="/src/img/two.jpg", alt="")
                 .form-box
-                    form.form-box__form(action=postLogin, method="post")
+                    form.form-box__form(method="post")
                         h2.form-box__title 로그인
-                        input(type="text", name="", placeholder="아이디")
-                        input(type="password", name="", placeholder="비밀번호")
-                        input(type="submit", name="", value="확인")
+                        input(type="text", name="id", placeholder="아이디")
+                        input(type="password", name="password", placeholder="비밀번호")
+                        input(type="submit", value="확인", formaction=routes.login)
                         p.sign__text 
                             | 계정이 없다면? 
                             a.sign-up__link(href="#", onclick="toggleForm();") 회원가입 
@@ -20,13 +20,13 @@ block content
                             a.guest__link(href="#") 게스트로 구경
             .user.signup
                 .form-box
-                    form.form-box__form(action=postJoin, method="post")
+                    form.form-box__form(method="post")
                         h2.form-box__title 회원가입
                         input(type="text", name="id", placeholder="아이디")
                         input(type="email", name="email", placeholder="메일 주소")
                         input(type="password", name="password", placeholder="비밀번호 입력")
                         input(type="password", name="password2", placeholder="비밀번호 재입력")
-                        input(type="submit", value="확인")
+                        input(type="submit", value="확인", formaction=routes.join)
                         p.sign__text 
                             | 이미 계정이 있다면? 
                             a.sign-in__link(href="#", onclick="toggleForm();") 로그인
