session 관련 패키지 설치 및 로그인 기능 추가
- session 을 관리하기 위한 express-session 패키지 설치 후 설정
- 로그인 실패 시 로그인 페이지로 돌아가도록 하고 성공 시 plans 페이지로
  이동하도록 postLogin 기능 추가
- 회원가입 시 자동으로 로그인되어 plans 페이지로 이동하도록 수정

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -3,10 +3,10 @@ header
         .header__logo
             a.logo__link(href=routes.home) AL🐥
         .header__button-wrapper <!--로그인/회원가입 페이지에서는 안보이게-->
-            if user.isAuthenticated
-                a.header__login(href=routes.home) 로그아웃 
-            else
+            if !user
                 a.header__login(href=routes.home) 로그인 
+            else
+                a.header__login(href=routes.home) 로그아웃 
             a.header__calendar(href=routes.calendar) 달력 
             button.study 공부 <!--할 일 내에서 일상, 공부 카테고리-->
             button.daily 일상 
