로그아웃 기능 추가

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -6,7 +6,7 @@ header
             if !user
                 a.header__login(href=routes.home) 로그인 
             else
-                a.header__login(href=routes.home) 로그아웃 
+                a.header__login(href=routes.logout) 로그아웃 
             a.header__calendar(href=routes.calendar) 달력 
             button.study 공부 <!--할 일 내에서 일상, 공부 카테고리-->
             button.daily 일상 
