--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -11,6 +11,10 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+
+	::selection {
+		background-color: $text-drag;
+	}
 }
 
 body {
@@ -35,29 +39,135 @@ header {
 	left: 0;
 	z-index: 9000;
 	width: 100%;
-	.header {
-		width: 78%;
-		margin: auto;
-		.header__logo {
-			float: left;
-			width: 70%;
-			font-size: 28px;
-			font-weight: 700;
-			margin-top: 3px;
-		}
-		.header__button-wrapper {
-			position: relative;
-			top: 0;
-			float: left;
-			width: 30%;
-			text-align: right;
 
-			a {
+	.header {
+		width: 89%;
+		margin: auto;
+
+		.dropdown {
+			float: left;
+			width: 50px;
+
+			.logo {
 				position: relative;
-				top: 1.5px;
+				top: -6px;
+				&__img {
+					width: 50px;
+					height: 45px;
+					display: block;
+					margin: 0 0 2px 2.5px;
+				}
+
+				&:hover {
+					.logo__img,
+					.logo__text {
+						opacity: 0.75;
+					}
+				}
+
+				&__text {
+					cursor: pointer;
+					font-weight: 600;
+					font-size: 15px;
+					letter-spacing: -0.3px;
+				}
+			}
+
+			&:hover {
+				.dropdown-menu {
+					display: block;
+					transition: transform 200ms ease-in;
+				}
+			}
+
+			&-menu {
+				position: relative;
+				display: none;
+				top: 15px;
+				left: 2px;
+				width: 200px;
+				padding: 8px 0;
+				border-radius: 4px;
+				background-color: #fff;
+				border: 1px solid $text;
+
+				// &.active {
+				// 	display: block;
+				// }
+
+				&:hover {
+					transform: translateY(2px);
+					display: block;
+				}
+
+				&::before {
+					content: "";
+					position: absolute;
+					top: -19px;
+					left: 13px;
+					width: 0;
+					height: 0;
+					border-top: 9px solid transparent;
+					border-left: 8px solid transparent;
+					border-bottom: 9px solid $text;
+					border-right: 8px solid transparent;
+				}
+
+				& h3,
+				& a {
+					font-size: 14px;
+					line-height: 1.5;
+					color: #24292e;
+					text-decoration: none;
+				}
+
+				& h3 {
+					padding: 8px 16px 16px;
+					border-bottom: 1px solid #e1e4e8;
+					font-weight: 500;
+
+					& strong {
+						font-weight: 700;
+
+						&:hover {
+							opacity: 0.5;
+						}
+					}
+				}
+
+				& ul {
+					padding: 8px 0;
+
+					&:last-child {
+						border-top: 1px solid rgba(27, 31, 35, 0.15);
+					}
+
+					& a {
+						display: block;
+						padding: 8px 16px;
+						font-size: 14px;
+						line-height: 1.5;
+						color: $title;
+						text-decoration: none;
+
+						&:hover {
+							color: white;
+							background: $text-hover;
+						}
+					}
+				}
+			}
+		}
+
+		.header__button-wrapper {
+			float: right;
+			margin-top: 7px;
+
+			span {
+				position: relative;
 				width: 50px;
 				height: 18px;
-				padding: 7.5px 8px 7.5px 12px;
+				padding: 7.5px 13px 7.5px 12px;
 				margin: 0 10px 0 0;
 				font-size: 14px;
 				background-color: $header-button;
@@ -66,18 +176,22 @@ header {
 			}
 
 			button {
+				position: relative;
+				top: -1px;
 				width: 55px;
-				height: 33px;
+				height: 34px;
 				font-size: 14px;
 				background-color: $header-button;
 				color: white;
 				border-right: 0.5px solid white;
 			}
 
+			/*
 			a:hover,
 			button:hover {
 				background-color: $header-button-hover;
 			}
+			*/
 		}
 	}
 }
